--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         60 NADU WHITE BETAL STREET,SANDHUKADAI,TIRUCHIRAPALLI-62008.
                         <a href="mailto:marioroghan@gmail.com">marioroghan@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">An independent and self motivated graduate looking for the greet future. Interested in coding languages like python,c++,c,java,html,css and experienced in wed developing </p>
+                    <p class="lead mb-5">An independent and self motivated graduate looking for the great future. Interested in coding languages like python,c++,c,java,html,css and experienced in web developing </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="#www.linkedin.com/in/mario-roghan-540069281"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -127,6 +127,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            web Development in Skill Vertex
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             spoken English Certificate 
