--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">\Experiance</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">An independent and self motivated graduate looking for the great future. Interested in coding languages like python,c++,c,java,html,css and experienced in web developing </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#www.linkedin.com/in/mario-roghan-540069281"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="www.linkedin.com/in/mario-roghan-540069281"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
